ci: use token to install libextism

--- a/.github/actions/libextism/action.yaml
+++ b/.github/actions/libextism/action.yaml
@@ -3,6 +3,11 @@ on: [workflow_call]
 name: libextism
 
 inputs:
+  gh-token:
+    description: "A GitHub PAT"
+    default: ${{ github.token }}
+
+inputs:
   prefix:
     description: 'Prefix for extism CLI'
     required: false
@@ -18,4 +23,4 @@ runs:
     - uses: ./.extism-cli/.github/actions/extism-cli
     - name: Install
       shell: bash
-      run: sudo extism lib install --version git --prefix ${{ inputs.prefix }}
+      run: sudo extism lib install --version git --prefix ${{ inputs.prefix }} --github-token ${{ inputs.gh-token }}
